--- a/exercises/week-06/01-scikit-learn.ipynb
+++ b/exercises/week-06/01-scikit-learn.ipynb
@@ -263,17 +263,71 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "age int64\n",
+      "workclass object\n",
+      "fnlwgt int64\n",
+      "education object\n",
+      "education-num int64\n",
+      "marital-status object\n",
+      "occupation object\n",
+      "relationship object\n",
+      "race object\n",
+      "sex object\n",
+      "capital-gain float64\n",
+      "capital-loss float64\n",
+      "hours-per-week float64\n",
+      "native-country object\n",
+      "salary int64\n"
+     ]
+    }
+   ],
    "source": [
     "for c in train.columns:\n",
-    "    if 'object' == train[c].dtype:\n",
-    "        lb_make = LabelEncoder()\n",
-    "        train[c] = lb_make.fit_transform(train[c])"
+    "    print (c, train[c].dtype)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 2, 1, 0])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lb_make = LabelEncoder()\n",
+    "country = [\"USA\", \"S.Korea\",\"Norway\",\"China\"]\n",
+    "lb_make.fit_transform(country)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lb_make = LabelEncoder()\n",
+    "for c in train.columns:\n",
+    "    if 'object' == train[c].dtype:\n",
+    "        train[c] = lb_make.fit_transform(train[c])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +486,7 @@
        "4            40.0               5       0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +667,7 @@
        "4        0.397959        0.121951     0.0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,23 +724,25 @@
     "    SVC(kernel=\"rbf\", probability=True),\n",
     "    DecisionTreeClassifier(),\n",
     "    RandomForestClassifier(),\n",
-    "    GaussianNB()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = train.pop('salary')\n",
-    "X = train\n",
-    "X_train,X_test,y_train,y_test = train_test_split(X.index,y,test_size=0.2)\n"
+    "    GaussianNB()\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = train.pop('salary')\n",
+    "\n",
+    "X = train\n",
+    "X_train,X_test,y_train,y_test = train_test_split(X,y,test_size=0.2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -696,28 +752,33 @@
       "==============================\n",
       "KNeighborsClassifier\n",
       "****Results****\n",
-      "Accuracy: 67.9000%\n",
-      "Log Loss: 4.404055098781964\n",
+      "900.0\n",
+      "Accuracy: 81.1389%\n",
+      "Log Loss: 2.5309490818151357\n",
       "==============================\n",
       "SVC\n",
       "****Results****\n",
-      "Accuracy: 74.3152%\n",
-      "Log Loss: 0.5601139585261052\n",
+      "465.0\n",
+      "Accuracy: 82.3642%\n",
+      "Log Loss: 0.35333418249207227\n",
       "==============================\n",
       "DecisionTreeClassifier\n",
       "****Results****\n",
-      "Accuracy: 62.2778%\n",
-      "Log Loss: 13.028803205192162\n",
+      "982.0\n",
+      "Accuracy: 80.7064%\n",
+      "Log Loss: 6.663776416413571\n",
       "==============================\n",
       "RandomForestClassifier\n",
       "****Results****\n",
-      "Accuracy: 64.8246%\n",
-      "Log Loss: 4.935343443636289\n",
+      "775.0\n",
+      "Accuracy: 84.8150%\n",
+      "Log Loss: 0.8988480087229307\n",
       "==============================\n",
       "GaussianNB\n",
       "****Results****\n",
-      "Accuracy: 75.2283%\n",
-      "Log Loss: 0.5601965374401854\n",
+      "483.0\n",
+      "Accuracy: 80.2018%\n",
+      "Log Loss: 0.8081472952059354\n",
       "==============================\n"
      ]
     }
@@ -730,18 +791,19 @@
     "log = pd.DataFrame(columns=log_cols)\n",
     "\n",
     "for clf in classifiers:\n",
-    "    clf.fit(X_train.to_frame(), y_train)\n",
+    "    clf.fit(X_train, y_train)\n",
     "    name = clf.__class__.__name__\n",
     "    \n",
     "    print(\"=\"*30)\n",
     "    print(name)\n",
     "    \n",
     "    print('****Results****')\n",
-    "    train_predictions_1 = clf.predict(X_test.to_frame())\n",
+    "    train_predictions_1 = clf.predict(X_test)\n",
+    "    print(train_predictions_1.sum())\n",
     "    acc = accuracy_score(y_test, train_predictions_1)\n",
     "    print(\"Accuracy: {:.4%}\".format(acc))\n",
     "    \n",
-    "    train_predictions_2 = clf.predict_proba(X_test.to_frame())\n",
+    "    train_predictions_2 = clf.predict_proba(X_test)\n",
     "    ll = log_loss(y_test, train_predictions_2)\n",
     "    print(\"Log Loss: {}\".format(ll))\n",
     "    \n",
@@ -760,60 +822,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 1, loss = 14.83243203\n",
-      "Iteration 2, loss = 15.36778235\n",
-      "Iteration 3, loss = 14.81570803\n",
-      "Iteration 4, loss = 14.45781664\n",
-      "Iteration 5, loss = 15.10217813\n",
-      "Iteration 6, loss = 14.62544223\n",
-      "Iteration 7, loss = 14.43388480\n",
-      "Iteration 8, loss = 13.57498193\n",
-      "Iteration 9, loss = 13.58073451\n",
-      "Iteration 10, loss = 13.70268302\n",
-      "Iteration 11, loss = 13.12027327\n",
-      "Iteration 12, loss = 13.05971474\n",
-      "Iteration 13, loss = 12.26912104\n",
-      "Iteration 14, loss = 12.40416870\n",
-      "Iteration 15, loss = 12.24396238\n",
-      "Iteration 16, loss = 11.70518944\n",
-      "Iteration 17, loss = 11.59022300\n",
-      "Iteration 18, loss = 11.04235027\n",
-      "Iteration 19, loss = 10.99587951\n",
-      "Iteration 20, loss = 10.65118345\n",
-      "Iteration 21, loss = 10.29240901\n",
-      "Iteration 22, loss = 9.85254527\n",
-      "Iteration 23, loss = 10.00184154\n",
-      "Iteration 24, loss = 9.61676206\n",
-      "Iteration 25, loss = 9.42176466\n",
-      "Iteration 26, loss = 8.99339862\n",
-      "Iteration 27, loss = 9.03795273\n",
-      "Iteration 28, loss = 8.87752200\n",
-      "Iteration 29, loss = 8.74656955\n",
-      "Iteration 30, loss = 8.76183893\n",
-      "Iteration 31, loss = 8.57025589\n",
-      "Iteration 32, loss = 8.46733346\n",
-      "Iteration 33, loss = 8.35604794\n",
-      "Iteration 34, loss = 8.37844223\n",
-      "Iteration 35, loss = 8.23233058\n",
-      "Iteration 36, loss = 8.07033696\n",
-      "Iteration 37, loss = 8.00558018\n",
-      "Iteration 38, loss = 8.05827055\n",
-      "Iteration 39, loss = 8.12291958\n",
-      "Iteration 40, loss = 8.01284362\n",
+      "Iteration 1, loss = 0.58268328\n",
+      "Iteration 2, loss = 0.54221922\n",
+      "Iteration 3, loss = 0.53477935\n",
+      "Iteration 4, loss = 0.52900407\n",
+      "Iteration 5, loss = 0.52317841\n",
+      "Iteration 6, loss = 0.51728046\n",
+      "Iteration 7, loss = 0.51102721\n",
+      "Iteration 8, loss = 0.50444799\n",
+      "Iteration 9, loss = 0.49761868\n",
+      "Iteration 10, loss = 0.49077800\n",
+      "Iteration 11, loss = 0.48411657\n",
+      "Iteration 12, loss = 0.47771358\n",
+      "Iteration 13, loss = 0.47185836\n",
+      "Iteration 14, loss = 0.46638622\n",
+      "Iteration 15, loss = 0.46129805\n",
+      "Iteration 16, loss = 0.45669658\n",
+      "Iteration 17, loss = 0.45247119\n",
+      "Iteration 18, loss = 0.44825501\n",
+      "Iteration 19, loss = 0.44437647\n",
+      "Iteration 20, loss = 0.44071437\n",
+      "Iteration 21, loss = 0.43706687\n",
+      "Iteration 22, loss = 0.43377928\n",
+      "Iteration 23, loss = 0.43053642\n",
+      "Iteration 24, loss = 0.42751876\n",
+      "Iteration 25, loss = 0.42474153\n",
+      "Iteration 26, loss = 0.42214051\n",
+      "Iteration 27, loss = 0.41955576\n",
+      "Iteration 28, loss = 0.41733814\n",
+      "Iteration 29, loss = 0.41495887\n",
+      "Iteration 30, loss = 0.41299098\n",
+      "Iteration 31, loss = 0.41070663\n",
+      "Iteration 32, loss = 0.40893315\n",
+      "Iteration 33, loss = 0.40700500\n",
+      "Iteration 34, loss = 0.40508681\n",
+      "Iteration 35, loss = 0.40333942\n",
+      "Iteration 36, loss = 0.40182477\n",
+      "Iteration 37, loss = 0.40021465\n",
+      "Iteration 38, loss = 0.39866963\n",
+      "Iteration 39, loss = 0.39718157\n",
+      "Iteration 40, loss = 0.39572092\n",
+      "Iteration 41, loss = 0.39435793\n",
+      "Iteration 42, loss = 0.39296562\n",
+      "Iteration 43, loss = 0.39163746\n",
+      "Iteration 44, loss = 0.39035681\n",
+      "Iteration 45, loss = 0.38903874\n",
+      "Iteration 46, loss = 0.38780927\n",
+      "Iteration 47, loss = 0.38663936\n",
+      "Iteration 48, loss = 0.38539920\n",
+      "Iteration 49, loss = 0.38420556\n",
+      "Iteration 50, loss = 0.38302682\n",
+      "Iteration 51, loss = 0.38196558\n",
+      "Iteration 52, loss = 0.38131562\n",
+      "Iteration 53, loss = 0.38009792\n",
+      "Iteration 54, loss = 0.37887796\n",
+      "Iteration 55, loss = 0.37799632\n",
+      "Iteration 56, loss = 0.37695603\n",
+      "Iteration 57, loss = 0.37618725\n",
+      "Iteration 58, loss = 0.37504680\n",
+      "Iteration 59, loss = 0.37412988\n",
+      "Iteration 60, loss = 0.37325120\n",
+      "Iteration 61, loss = 0.37245048\n",
+      "Iteration 62, loss = 0.37191745\n",
+      "Iteration 63, loss = 0.37066893\n",
+      "Iteration 64, loss = 0.36978528\n",
+      "Iteration 65, loss = 0.36901364\n",
+      "Iteration 66, loss = 0.36838693\n",
+      "Iteration 67, loss = 0.36774218\n",
+      "Iteration 68, loss = 0.36724283\n",
+      "Iteration 69, loss = 0.36636509\n",
+      "Iteration 70, loss = 0.36569727\n",
+      "Iteration 71, loss = 0.36474611\n",
+      "Iteration 72, loss = 0.36427992\n",
+      "Iteration 73, loss = 0.36366495\n",
+      "Iteration 74, loss = 0.36331839\n",
+      "Iteration 75, loss = 0.36213290\n",
+      "Iteration 76, loss = 0.36168804\n",
+      "Iteration 77, loss = 0.36108884\n",
+      "Iteration 78, loss = 0.36042902\n",
+      "Iteration 79, loss = 0.35967492\n",
+      "Iteration 80, loss = 0.35918131\n",
+      "Iteration 81, loss = 0.35893221\n",
+      "Iteration 82, loss = 0.35798129\n",
+      "Iteration 83, loss = 0.35748474\n",
+      "Iteration 84, loss = 0.35714944\n",
+      "Iteration 85, loss = 0.35634677\n",
+      "Iteration 86, loss = 0.35571458\n",
+      "Iteration 87, loss = 0.35546826\n",
+      "Iteration 88, loss = 0.35493302\n",
+      "Iteration 89, loss = 0.35468250\n",
+      "Iteration 90, loss = 0.35415215\n",
+      "Iteration 91, loss = 0.35339143\n",
+      "Iteration 92, loss = 0.35310793\n",
+      "Iteration 93, loss = 0.35238400\n",
+      "Iteration 94, loss = 0.35186897\n",
+      "Iteration 95, loss = 0.35202729\n",
+      "Iteration 96, loss = 0.35112901\n",
+      "Iteration 97, loss = 0.35041628\n",
+      "Iteration 98, loss = 0.34998314\n",
+      "Iteration 99, loss = 0.34976252\n",
+      "Iteration 100, loss = 0.34924761\n",
+      "Iteration 101, loss = 0.34904157\n",
+      "Iteration 102, loss = 0.34831039\n",
+      "Iteration 103, loss = 0.34798389\n",
+      "Iteration 104, loss = 0.34779549\n",
+      "Iteration 105, loss = 0.34744482\n",
+      "Iteration 106, loss = 0.34678914\n",
+      "Iteration 107, loss = 0.34656831\n",
+      "Iteration 108, loss = 0.34626043\n",
+      "Iteration 109, loss = 0.34552661\n",
+      "Iteration 110, loss = 0.34504886\n",
+      "Iteration 111, loss = 0.34493670\n",
+      "Iteration 112, loss = 0.34458277\n",
+      "Iteration 113, loss = 0.34410094\n",
+      "Iteration 114, loss = 0.34354386\n",
+      "Iteration 115, loss = 0.34324351\n",
+      "Iteration 116, loss = 0.34257942\n",
+      "Iteration 117, loss = 0.34243511\n",
+      "Iteration 118, loss = 0.34181444\n",
+      "Iteration 119, loss = 0.34164668\n",
+      "Iteration 120, loss = 0.34149178\n",
+      "Iteration 121, loss = 0.34110391\n",
+      "Iteration 122, loss = 0.34057308\n",
+      "Iteration 123, loss = 0.34051068\n",
+      "Iteration 124, loss = 0.34021400\n",
+      "Iteration 125, loss = 0.33927048\n",
+      "Iteration 126, loss = 0.33929128\n",
+      "Iteration 127, loss = 0.33858375\n",
+      "Iteration 128, loss = 0.33846040\n",
+      "Iteration 129, loss = 0.33820517\n",
+      "Iteration 130, loss = 0.33773974\n",
+      "Iteration 131, loss = 0.33778478\n",
+      "Iteration 132, loss = 0.33725418\n",
+      "Iteration 133, loss = 0.33675377\n",
+      "Iteration 134, loss = 0.33675009\n",
+      "Iteration 135, loss = 0.33626440\n",
+      "Iteration 136, loss = 0.33582740\n",
+      "Iteration 137, loss = 0.33617544\n",
+      "Iteration 138, loss = 0.33462642\n",
+      "Iteration 139, loss = 0.33492460\n",
+      "Iteration 140, loss = 0.33483488\n",
+      "Iteration 141, loss = 0.33477240\n",
       "Training loss did not improve more than tol=0.000000 for two consecutive epochs. Stopping.\n",
       "==============================\n",
       "MLPClassifier\n",
       "****Results****\n",
-      "Number of class 1: 0%\n",
-      "Accuracy: 75.2283%\n",
-      "Log Loss: 0.8255477310543646\n"
+      "Number of class 1: 82700%\n",
+      "Accuracy: 84.4306%\n",
+      "Log Loss: 0.32719839764537717\n"
      ]
     }
    ],
@@ -821,20 +984,20 @@
     "from sklearn.neural_network import MLPClassifier\n",
     "clf = MLPClassifier(hidden_layer_sizes=(100,100,100), max_iter=5000, alpha=0.0001,\n",
     "                     solver='sgd', verbose=10,  random_state=0,tol=0.000000001)\n",
-    "clf.fit(X_train.to_frame(), y_train)\n",
+    "clf.fit(X_train, y_train)\n",
     "name = clf.__class__.__name__\n",
     "\n",
     "print(\"=\"*30)\n",
     "print(name)\n",
     "\n",
     "print('****Results****')\n",
-    "train_predictions_1 = clf.predict(X_test.to_frame())\n",
+    "train_predictions_1 = clf.predict(X_test)\n",
     "\n",
     "print(\"Number of class 1: {:.0%}\".format(train_predictions_1.sum()))\n",
     "acc = accuracy_score(y_test, train_predictions_1)\n",
     "print(\"Accuracy: {:.4%}\".format(acc))\n",
     "\n",
-    "train_predictions_2 = clf.predict_proba(X_test.to_frame())\n",
+    "train_predictions_2 = clf.predict_proba(X_test)\n",
     "ll = log_loss(y_test, train_predictions_2)\n",
     "print(\"Log Loss: {}\".format(ll))\n",
     "\n",
